--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,20 +1,39 @@
 asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
 certifi==2024.2.2
 cffi==1.16.0
 channels==3.0.5
+channels-redis==4.2.0
 charset-normalizer==3.3.2
+constantly==23.10.4
 cryptography==42.0.5
+daphne==3.0.2
 Django==4.0.3
 django-extensions==3.2.3
+hyperlink==21.0.0
 idna==3.6
+incremental==22.10.0
 MarkupSafe==2.1.5
+msgpack==1.0.8
 Naked==0.1.32
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.8.0
 pyOpenSSL==24.0.0
 PyYAML==6.0.1
+redis==5.0.3
 requests==2.31.0
+service-identity==24.1.0
 shellescape==3.8.1
+six==1.16.0
 sqlparse==0.4.4
+twisted==24.3.0
+txaio==23.1.1
+typing-extensions==4.10.0
 urllib3==2.2.1
-Werkzeug==3.0.1
+werkzeug==3.0.1
+zope.interface==6.2
